--- a/style.css
+++ b/style.css
@@ -15,6 +15,11 @@
 .greeting{
     font-weight:400;
 }
+
+.explaning{
+  
+}
+
 .header{
     text-align:center;
     position:absolute;
@@ -25,7 +30,7 @@
 
 .input{
     position:absolute;
-    top:100px;
+    top:120px;
     left:310px;
 }
 
